--- a/Trasabilitate/MainWindow.xaml
+++ b/Trasabilitate/MainWindow.xaml
@@ -1,10 +1,16 @@
-﻿<Window x:Class="Trasabilitate.MainWindow"
+﻿<Window x:Class="WpfApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Trasabilitate"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid/>
+        Title="PLC Connection" Height="350" Width="525">
+    <!-- Adaugăm toate elementele UI în interiorul unui Grid -->
+    <Grid>
+        <Button x:Name="ConnectButton"
+                Content="Connect to PLC"
+                Width="200" Height="50"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Background="Gray"
+                Click="ConnectButton_Click_1"/>
+
+    </Grid>
 </Window>
